# tieng-viet

./: Cargo.toml  README.md
src/: classifiers.txt  demonstratives.txt  main.rs  noun_phrases.txt  proper_nouns.txt  sentences.txt  verb_phrases.txt  verbs.txt
src/grammar/: defaults_parser.rs  mod.rs  phrase.rs  sentence.rs  word.rs
src/gui/: menu.rs  mod.rs
