[package]
name = "tieng-viet"
version = "0.1.0"
authors = ["Thomas Versteeg <thomasversteeg@gmx.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.33"
termion = "1.5.5"

[dev-dependencies]
indoc = "1.0.3"
